syntax = "proto3";
option swift_prefix="SP";

import "ClientInfo.proto";
import "Challenge.proto";

message ClientToken {
    string val = 1;
    int32 expiresInS = 2;
    int32 refreshAfterS = 3;
    repeated ClientTokenDomain domains = 4;
}

message ClientTokenDomain {
    string domain = 1;
}

message ClientTokenRequest {
    ClientTokenRequestType type = 1;
    oneof request {
        ClientInfo client = 2;
        ClientTokenChallengeAnswerData answerData = 3;
    }
}

enum ClientTokenRequestType {
    REQUEST_UNKNOWN = 0;
    REQUEST_CLIENT_DATA_REQUEST = 1;
    REQUEST_CHALLENGE_ANSWERS_REQUEST = 2;
}

enum ClientTokenChallengeType {
    CHALLENGE_UNKNOWN = 0;
    CHALLENGE_CLIENT_SECRET_HMAC = 1;
    CHALLENGE_EVALUATE_JS = 2;
    CHALLENGE_HASH_CASH = 3;
}

message ClientTokenChallengeAnswerData {
    string context = 1;//librespot-java: string state = 1;
    repeated ClientTokenChallengeAnswer answers = 2;
}

message ClientTokenChallengeAnswer {
    ClientTokenChallengeType type = 1;
    oneof answer {
        ClientSecretHMACAnswer clSecretAnswer = 2;
        EvaluateJSAnswer evaluateJS = 3;
        HashcashChallengeAnswer hashcash = 4;
    }
}


message ClientTokenResponse {
    ClientTokenResponseType type = 1;
    oneof response {
        ClientToken token = 2;
        ClientTokenChallengesData challenges = 3;
    }
}

enum ClientTokenResponseType {
    RESPONSE_UNKNOWN = 0;
    RESPONSE_GRANTED_TOKEN_RESPONSE = 1;
    RESPONSE_CHALLENGES_RESPONSE = 2;
}

message ClientTokenChallengesData {
    string context = 1;
    repeated ClientTokenChallenge challenges = 2;
}

message ClientTokenChallenge {
    ClientTokenChallengeType type = 1;
    oneof parameters {
        ClientSecretChallenge clSecretParameters = 2;
        EvaluateJSChallenge jsParameters = 3;
        HashcashChallenge hashcashParameters = 4;
    }
}

message ClientTokenBadRequest {
    string errMsg = 1;
}
